@@ -54,7 +54,7 @@ main(int argc, char* a_p_argv[])
   using namespace pb_ds::test;
   typedef lu_set_tl_t map_tl_t;
 
-  return rand_regression_test(100, 10,
+  return rand_regression_test(10, 1,
 			      "lu_no_data_map_rand_regression_test",
 			      map_tl_t());
 }
